added code to index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-        
-        </title>
+        <title>Jason Felipe's Portfolio</title>
+
     </head>
     <body>
-        
+        <h1>
+            Welcome To My World
+        </h1>
+
+        <img src="https://placehold.it/200x200" alt="Jason Felipe">
+
+        <p>Hey! Welcome to my small portfolio. Things get updated, so uh, yeah.</p>
+
+        <h2>Contact Info</h2>
+        <ul>
+            <li>Email: <a href="jasonrfelipe@gmail.com">jasonrfelipe@gmail.com</a></li>
+            <li>Github: <a href="https://github.com/jasonfelipe">jasonfelipe</a></li>
+        </ul>
+
     </body>
 </html>
