--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Jason Felipe's Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
 
     </head>
     <body>
@@ -11,7 +12,10 @@
 
         <img src="https://placehold.it/200x200" alt="Jason Felipe">
 
-        <p>Hey! Welcome to my small portfolio. Things get updated, so uh, yeah.</p>
+        <p>Hey! Welcome to my small portfolio. Things get updated, so uh, yeah.
+            I'm a Canadian American currently residing in Gilbert, Arizona. I have graduated from ASU in 2014 and have a 
+            Bachaelors Degree in English Creative Writing. I love video games, stories, and relaxing! 
+        </p>
 
         <h2>Contact Info</h2>
         <ul>
