modified all html and css files

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Jason Felipe's Portfolio</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     </head>
     <body>
+        <ul class="nav">
+            
+            <li class="navli"><a href="index.html">Index</a></li>
+            <li class="navli"><a href="portfolio.html">Portfolio</a></li>
+            <li class="navli"><a href="contact.html">Contact Me</a></li>
+        </ul>
+
         <h1>
             Welcome To My World
         </h1>
@@ -14,14 +21,8 @@
 
         <p>Hey! Welcome to my small portfolio. Things get updated, so uh, yeah.
             I'm a Canadian American currently residing in Gilbert, Arizona. I have graduated from ASU in 2014 and have a 
-            Bachaelors Degree in English Creative Writing. I love video games, stories, and relaxing! 
+            Bachaelors Degree in English Creative Writing and a minor in Japanese. I love video games, stories, and relaxing! 
         </p>
-
-        <h2>Contact Info</h2>
-        <ul>
-            <li>Email: <a href="jasonrfelipe@gmail.com">jasonrfelipe@gmail.com</a></li>
-            <li>Github: <a href="https://github.com/jasonfelipe">jasonfelipe</a></li>
-        </ul>
 
     </body>
 </html>
