--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 
     </head>
     <body>
+        <header>
+            Jason's Portfolio
+        </header>
+
         <ul class="nav">
-            
-            <li class="navli"><a href="index.html">Index</a></li>
-            <li class="navli"><a href="portfolio.html">Portfolio</a></li>
             <li class="navli"><a href="contact.html">Contact Me</a></li>
+            <li class="navli"><a href="portfolio.html">Portfolio</a></li>
+            <li class="navli"><a href="index.html">About Me</a></li>
         </ul>
 
         <h1>
