modified all files

--- a/index.html
+++ b/index.html
@@ -6,26 +6,32 @@
 
     </head>
     <body>
-        <header>
+        <div class="content">
+            <div class="content-inside">
+            <header>
             Jason's Portfolio
-        </header>
+            </header>
 
-        <ul class="nav">
-            <li class="navli"><a href="contact.html">Contact Me</a></li>
-            <li class="navli"><a href="portfolio.html">Portfolio</a></li>
-            <li class="navli"><a href="index.html">About Me</a></li>
-        </ul>
+            <ul class="nav">
+                <li class="navli"><a href="contact.html">Contact Me</a></li>
+                <li class="navli"><a href="portfolio.html">Portfolio</a></li>
+                <li class="navli"><a href="index.html">About Me</a></li>
+            </ul>
 
-        <h1>
-            Welcome To My World
-        </h1>
+            <h1>
+                Welcome To My World
+            </h1>
 
-        <img src="https://placehold.it/200x200" alt="Jason Felipe">
+            <img src="https://placehold.it/200x200" alt="Jason Felipe">
 
-        <p>Hey! Welcome to my small portfolio. Things get updated, so uh, yeah.
-            I'm a Canadian American currently residing in Gilbert, Arizona. I have graduated from ASU in 2014 and have a 
-            Bachaelors Degree in English Creative Writing and a minor in Japanese. I love video games, stories, and relaxing! 
-        </p>
+            <p>Hey! Welcome to my small portfolio. Things get updated, so uh, yeah.
+                I'm a Canadian American currently residing in Gilbert, Arizona. I have graduated from ASU in 2014 and have a 
+                 Bachaelors Degree in English Creative Writing and a minor in Japanese. I love video games, stories, and relaxing! 
+            </p>
+        
+        </div>
+    </div>
+    <footer class="footer">Copyright ©2018</footer>
 
     </body>
 </html>
