modified all files and added images folder

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,16 +9,14 @@
     <body>
         <div class="content">
             <div class="content-inside">
-                <header>
-                    Jason's Portfolio
-                </header>
-
-                <ul class="nav">
-                    <li class="navli"><a href="contact.html">Contact Me</a></li>
-                    <li class="navli"><a href="portfolio.html">Portfolio</a></li>
-                    <li class="navli"><a href="index.html">About Me</a></li>
-                </ul>
-            
+                <section>
+                    <header>Jason's Portfolio</header>
+                    <ul class="nav">
+                        <li class="navli"><a href="contact.html">Contact Me</a></li>
+                        <li class="navli"><a href="portfolio.html">Portfolio</a></li>
+                        <li class="navli"><a href="index.html">About Me</a></li>
+                    </ul>
+                </section> 
         
                 <h1>Placeholder</h1>
 
