modified contactme and css

--- a/contact.html
+++ b/contact.html
@@ -18,12 +18,32 @@
                     </ul>
                 </section>
                 
-                <h2>Contact Info</h2>
+                <div class="wrap">
+                    <h2>Contact Info</h2>
         
-                <ul>
-                    <li>Email: <a href="jasonrfelipe@gmail.com">jasonrfelipe@gmail.com</a></li>
-                    <li>Github: <a href="https://github.com/jasonfelipe">jasonfelipe</a></li>
-                </ul>
+                    <ul>
+                        <li>Email: <a href="jasonrfelipe@gmail.com">jasonrfelipe@gmail.com</a></li>
+                        <li>Github: <a href="https://github.com/jasonfelipe">jasonfelipe</a></li>
+                    </ul>
+
+                    <form action="/action_page.php">
+                        Name: <input type="text" name="name">
+                        Email: <input type="text" name="email"><br>
+                        <br>
+                        <textarea id="commentbox" rows="4" cols="50" name="comment" form="usrform">Any questions or comments?</textarea>
+                        <br>
+                        <input id="submitbutton" type="submit" value="Submit">
+                    </form>
+                </div>
+
+
+
+
+
+
+
+
+
 
             </div>
         </div>
