added images and modified all files

--- a/contact.html
+++ b/contact.html
@@ -19,14 +19,14 @@
                 </section>
                 
                 <div class="wrap">
-                    <h2>Contact Info</h2>
+                    <h1 class="titleheader">Contact Info</h1>
         
                     <ul>
                         <li>Email: <a href="jasonrfelipe@gmail.com">jasonrfelipe@gmail.com</a></li>
                         <li>Github: <a href="https://github.com/jasonfelipe">jasonfelipe</a></li>
                     </ul>
 
-                    <form action="/action_page.php">
+                    <form class="text" action="/action_page.php">
                         Name: <input type="text" name="name">
                         Email: <input type="text" name="email"><br>
                         <br>
@@ -35,10 +35,6 @@
                         <input id="submitbutton" type="submit" value="Submit">
                     </form>
                 </div>
-
-
-
-
 
 
 
