--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Jason Felipe's Portfolio</title>
+        <title>Jason Felipe's Website</title>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     </head>
@@ -22,7 +22,7 @@
                 <div class="wrap"> 
                         
                         
-                    <h1>
+                    <h1 class="titleheader">
                         Welcome To My World
                     </h1>
 
