--- a/portfolio.html
+++ b/portfolio.html
@@ -21,14 +21,16 @@
 
                 <h1 class="titleheader">My Works</h1>
 
-                <img src="assets/images/100stars.jpg" alt="Getting 100 Stars">
-                <img src="assets/images/daigowut.png" alt="Daigo">
-                <img src="assets/images/yesyes.png"   alt="Pure Bliss">
-                <img src="assets/images/madknuckle.jpg"  alt="Knuckles">
-                <img src="assets/images/saddoge.png"  alt="Sad Doge">
-                <img src="assets/images/madcaptain.png"  alt="The Captain">
-                <img src="assets/images/hangout.jpg"  alt="Mike Ross">
 
+            <ul class="clearfix">
+                <li class="liportfolio"><img class="portfolio" src="assets/images/100stars.jpg" alt="Getting 100 Stars"></li>
+                <li class="liportfolio"><img class="portfolio" src="assets/images/daigowut.png" alt="Daigo"></li>
+                <li class="liportfolio"><img class="portfolio" src="assets/images/yesyes.png"   alt="Pure Bliss"></li>
+                <li class="liportfolio"><img class="portfolio" src="assets/images/madknuckle.jpg"  alt="Knuckles"></li>
+                <li class="liportfolio"><img class="portfolio" src="assets/images/saddoge.png"  alt="Sad Doge"></li>
+                <li class="liportfolio"><img class="portfolio" src="assets/images/madcaptain.png"  alt="The Captain"></li>
+                <li class="liportfolio"><img class="portfolio" src="assets/images/hangout.jpg"  alt="Mike Ross"></li>
+            </ul>
                 
 
             </div>
