edited css and portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,19 +19,20 @@
                     </ul>
                 </section> 
 
-                <h1 class="titleheader">My Works</h1>
+                <div class="wrap">
 
+                    <h1 class="titleheader">My Works</h1>
 
-            <ul class="clearfix">
-                <li class="liportfolio"><img class="portfolio" src="assets/images/100stars.jpg" alt="Getting 100 Stars"></li>
-                <li class="liportfolio"><img class="portfolio" src="assets/images/daigowut.png" alt="Daigo"></li>
-                <li class="liportfolio"><img class="portfolio" src="assets/images/yesyes.png"   alt="Pure Bliss"></li>
-                <li class="liportfolio"><img class="portfolio" src="assets/images/madknuckle.jpg"  alt="Knuckles"></li>
-                <li class="liportfolio"><img class="portfolio" src="assets/images/saddoge.png"  alt="Sad Doge"></li>
-                <li class="liportfolio"><img class="portfolio" src="assets/images/madcaptain.png"  alt="The Captain"></li>
-                <li class="liportfolio"><img class="portfolio" src="assets/images/hangout.jpg"  alt="Mike Ross"></li>
-            </ul>
-                
+                    <ul class="clearfix" id="ulportfolio">
+                        <li class="liportfolio"><img class="portfolio" src="assets/images/100stars.jpg" alt="Getting 100 Stars"></li>
+                        <li class="liportfolio"><img class="portfolio" src="assets/images/daigowut.png" alt="Daigo"></li>
+                        <li class="liportfolio"><img class="portfolio" src="assets/images/yesyes.png"   alt="Pure Bliss"></li>
+                        <li class="liportfolio"><img class="portfolio" src="assets/images/madknuckle.jpg"  alt="Knuckles"></li>
+                        <li class="liportfolio"><img class="portfolio" src="assets/images/saddoge.png"  alt="Sad Doge"></li>
+                        <li class="liportfolio"><img class="portfolio" src="assets/images/madcaptain.png"  alt="The Captain"></li>
+                        <li class="liportfolio"><img class="portfolio" src="assets/images/hangout.jpg"  alt="Mike Ross"></li>
+                    </ul>
+                </div>    
 
             </div>
         </div>
