starting image titles

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,13 +24,38 @@
                     <h1 class="titleheader">My Works</h1>
 
                     <ul class="clearfix" id="ulportfolio">
-                        <li class="liportfolio"><img src="assets/images/100stars.jpg" alt="Getting 100 Stars"></li>
-                        <li class="liportfolio"><img src="assets/images/daigowut.png" alt="Daigo"></li>
-                        <li class="liportfolio"><img src="assets/images/yesyes.png"   alt="Pure Bliss"></li>
-                        <li class="liportfolio"><img src="assets/images/saddoge.png"  alt="Sad Doge"></li>
-                        <li class="liportfolio"><img src="assets/images/madcaptain.png"  alt="The Captain"></li>
-                        <li class="liportfolio"><img src="assets/images/hangout.jpg"  alt="Mike Ross"></li>
-                        <li class="liportfolio"><img src="assets/images/madknuckle.jpg"  alt="Knuckles"></li>
+                        <li class="liportfolio">
+                            <img src="assets/images/100stars.jpg" alt="Getting 100 Stars">
+                        </li>
+
+                        <li class="liportfolio">
+                            <img src="assets/images/daigowut.png" alt="Daigo">
+                        </li>
+
+                        <li class="liportfolio">
+                            <div class="imagecontainer">
+                                        <img src="assets/images/yesyes.png" alt="Pure Bliss">
+                                
+                                        <div class="imagetitle"><span>Bliss</span></div>
+                                  
+                            </div>
+                        </li>
+
+                        <li class="liportfolio">
+                            <img src="assets/images/saddoge.png"  alt="Sad Doge">
+                        </li>
+
+                        <li class="liportfolio">
+                            <img src="assets/images/madcaptain.png"  alt="The Captain">
+                        </li>
+
+                        <li class="liportfolio">
+                            <img src="assets/images/hangout.jpg"  alt="Mike Ross">
+                        </li>
+
+                        <li class="liportfolio">
+                            <img src="assets/images/madknuckle.jpg"  alt="Knuckles">
+                        </li>
                     </ul>
                 </div>    
 
