modified all html and css files

--- a/contact.html
+++ b/contact.html
@@ -19,12 +19,7 @@
                 </section>
                 
                 <div class="wrap">
-                    <h1 class="titleheader">Contact Info</h1>
-        
-                    <ul>
-                        <li>Email: <a href="jasonrfelipe@gmail.com">jasonrfelipe@gmail.com</a></li>
-                        <li>Github: <a href="https://github.com/jasonfelipe">jasonfelipe</a></li>
-                    </ul>
+                    <h1 class="titleheader">Contact Me!</h1>
 
                     <form class="text" action="/action_page.php">
                         Name: <input type="text" name="name">
