--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                         'm a Canadian American currently residing in Gilbert, Arizona. I have graduated from ASU in 2014 and have a 
                         Bachaelors Degree in English Creative Writing and a minor in Japanese. I love video games, stories, and relaxing! 
                     </p>
+
+                    <p>Email: <a href="jasonrfelipe@gmail.com">jasonrfelipe@gmail.com</a></p>
+                    <p>Github: <a href="https://github.com/jasonfelipe">jasonfelipe</a></p>
+
                 </div>
         
             </div>
