--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                 <div class="wrap">
                     <h1 class="titleheader">Contact Me!</h1>
 
-                    <form class="text" action="/action_page.php">
+                    <form class="text" action="/action_page.php" id="text">
                         Name: <input type="text" name="name">
                         Email: <input type="text" name="email"><br>
                         <br>
