added notes, also cleaned up css files and finishing touches

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
         <div class="content">
             <div class="content-inside">
                 <section>
-                    <header>Jason's Portfolio</header>
+                    <header>Jason's Random Pictures</header>
                     <ul class="nav">
                         <li class="navli"><a href="contact.html">Contact Me</a></li>
                         <li class="navli"><a href="portfolio.html">Portfolio</a></li>
@@ -21,7 +21,7 @@
 
                 <div class="wrap">
 
-                    <h1 class="titleheader">My Works</h1>
+                    <h1 class="titleheader">My Random Pictures</h1>
 
                     <ul class="clearfix" id="ulportfolio">
                         <li class="liportfolio">
