small edits and name changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
         <div class="content">
             <div class="content-inside">
                 <section>
-                    <header>Jason's Random Pictures</header>
+                    <header>Jason's Portfolio</header>
                     <ul class="nav">
                         <li class="navli"><a href="contact.html">Contact Me</a></li>
                         <li class="navli"><a href="portfolio.html">Portfolio</a></li>
@@ -55,7 +55,7 @@
                             <div class="relative">
                                 <img src="assets/images/saddoge.png"  alt="Sad Doge">
                             
-                                <div class="imagetitle"><span>Depressed</span></div>
+                                <div class="imagetitle"><span>Annoyed</span></div>
                             </div>
                         </li>
 
