--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         Welcome To My World!
                     </h1>
 
-                    <img src="assets/images/placeholder-me.png" alt="Jason Felipe">
+                    <img src="assets/images/its-me.jpg" style="width:300px; height:200px" alt="Jason Felipe">
 
                     <p> Hey! Welcome to my small portfolio. Things get updated, so uh, yeah.
                         'm a Canadian American currently residing in Gilbert, Arizona. I have graduated from ASU in 2014 and have a 
