--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <img src="assets/images/its-me.jpg" style="width:300px; height:200px" alt="Jason Felipe">
 
                     <p> Hey! Welcome to my small portfolio. Things get updated, so uh, yeah.
-                        'm a Canadian American currently residing in Gilbert, Arizona. I have graduated from ASU in 2014 and have a 
+                        I'm a Canadian American currently residing in Gilbert, Arizona. I have graduated from ASU in 2014 and have a 
                         Bachaelors Degree in English Creative Writing and a minor in Japanese. I love video games, stories, and relaxing! 
                     </p>
 
