added links to projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,6 +27,24 @@
             </section>
 
             <div class="wrap">
+                <h1 class="titleheader">Web Stuff</h1>    
+                <ul class="linklist">
+                    <li class="links">
+                        <a href="https://jasonfelipe.github.io/giphyAPI/" target="_blank">giphyAPI</a>
+                    </li>
+
+                    <li class="links">
+                        <a href="https://jasonfelipe.github.io/SF-WordGame/" target="_blank">Street Fighter Word Game</a>
+                    </li>
+
+                    <li class="links">
+                        <a href="https://jasonfelipe.github.io/triviaGame/" target="_blank">Fallout Trivia Game</a>
+                    </li>
+                </ul>
+
+            </div>
+
+            <div class="wrap">
 
                 <h1 class="titleheader">My Random Pictures</h1>
 
@@ -38,7 +56,7 @@
                             <div class="imagetitle">
                                 <span>Neutral</span>
                             </div>
-
+                        </div>
                     </li>
 
                     <li class="liportfolio">
