added projects into portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,31 +33,20 @@
                 <ul id="ulportfolio">
                     <li class="liportfolio">
                         <div class="relative">
-                            <img src="assets/images/100stars.jpg" alt="Neutral">
+                            <img src="assets/images/triviaGame.png" alt="Fallout Trivia">
 
                             <div class="imagetitle">
-                                <span>Neutral</span>
+                                <span>Fallout Trivia</span>
                             </div>
 
                     </li>
 
                     <li class="liportfolio">
                         <div class="relative">
-                            <img src="assets/images/daigowut.png" alt="Daigo">
+                            <img src="assets/images/marvelproject.png" alt="Marvel">
 
                             <div class="imagetitle">
-                                <span>Happy</span>
-                            </div>
-
-                        </div>
-                    </li>
-
-                    <li class="liportfolio">
-                        <div class="relative">
-                            <img src="assets/images/yesyes.png" alt="Pure Bliss">
-
-                            <div class="imagetitle">
-                                <span>Bliss</span>
+                                <span>Marvel Team-up Project</span>
                             </div>
 
                         </div>
@@ -65,20 +54,31 @@
 
                     <li class="liportfolio">
                         <div class="relative">
-                            <img src="assets/images/saddoge.png" alt="Sad Doge">
+                            <img src="assets/images/giphyAPI.png" alt="Video Game Giphy">
 
                             <div class="imagetitle">
-                                <span>Annoyed</span>
+                                <span>Video Game Giphy!</span>
+                            </div>
+
+                        </div>
+                    </li>
+
+                    <li class="liportfolio">
+                        <div class="relative">
+                            <img src="assets/images/sfwordgame.png" alt="Street Fighter Guess Who!">
+
+                            <div class="imagetitle">
+                                <span>Street Fighter Guess Who!</span>
                             </div>
                         </div>
                     </li>
 
                     <li class="liportfolio">
                         <div class="relative">
-                            <img src="assets/images/madcaptain.png" alt="The Captain">
+                            <img src="assets/images/crystals.png" alt="Crystal Collector Game">
 
                             <div class="imagetitle">
-                                <span>Angry</span>
+                                <span>Crystal Collector Game</span>
                             </div>
                         </div>
                     </li>
